--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "2",
         "maatwebsite/excel": "^3.1",
-        "spatie/laravel-permission": "^4.2"
+        "spatie/laravel-permission": "^4.2",
+        "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
